--- a/hhr_2023/src/app/header/header.component.css
+++ b/hhr_2023/src/app/header/header.component.css
@@ -1,36 +1,30 @@
-
 .nav-bar {
     display: flex;
     align-items: center;
-    padding: 0px;
-    height: 4vh;
+    padding: 0;
 }
 
 nav {  
+    height: 9vh;
     display: flex;
     background-color: #4767ab;
     font-family: "Work Sans", sans-serif; 
     text-align: center;
     align-items: center;
-    font-size: 17px; 
+    font-size: 1.15vw; 
     position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    padding-top: 10px;
     }
 
 .nav-name {
     margin-right: 53vw;
 }
 
-.group-link {
-    display: flex;
-    margin-left: 1100px;
-}
-
 #name {
     color: white;
-    margin-left: .5vw;
+    margin-left: 1vw;
     font-size: 30px; 
     font-style: italic; 
     }
@@ -39,8 +33,8 @@ nav {
 #about-link, #contact-link, #booking-link {
     color: white;
     text-decoration: none;
-    padding: 20px 15px;
-    margin-left: 40px;
+    padding: 2vh 1.2vw;
+    margin-right: 3vw;
 }
 
 #home-link {
